--- a/contact.html
+++ b/contact.html
@@ -108,10 +108,10 @@
 
     <!-- Mobile Menu Overlay -->
     <div class="mobile-menu" id="mobile-menu">
-        <a href="/">Ana Sayfa</a>
-        <a href="programming">Programlama</a>
-        <a href="apps">Uygulamalar</a>
-        <a href="contact">İletişim</a>
+        <a href="/"><i class="fa-solid fa-house"></i> Ana Sayfa</a>
+        <a href="programming"><i class="fa-solid fa-code"></i> Programlama</a>
+        <a href="apps"><i class="fa-solid fa-layer-group"></i> Uygulamalar</a>
+        <a href="contact"><i class="fa-solid fa-envelope"></i> İletişim</a>
     </div>
 
     <main class="container" style="padding-top: 100px; padding-bottom: 100px;">
