--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 
     <!-- Mobile Menu Overlay -->
     <div class="mobile-menu" id="mobile-menu">
-        <a href="/">Ana Sayfa</a>
-        <a href="programming">Programlama</a>
-        <a href="apps">Uygulamalar</a>
-        <a href="contact">İletişim</a>
+        <a href="/"><i class="fa-solid fa-house"></i> Ana Sayfa</a>
+        <a href="programming"><i class="fa-solid fa-code"></i> Programlama</a>
+        <a href="apps"><i class="fa-solid fa-layer-group"></i> Uygulamalar</a>
+        <a href="contact"><i class="fa-solid fa-envelope"></i> İletişim</a>
     </div>
 
     <main>
@@ -118,8 +118,7 @@
                         <img src="images/ibtech.png" alt="IBTECH" class="timeline-img">
                         <h4 style="color: var(--accent); margin-bottom: 8px;">Ocak 2025 - ŞİMDİ</h4>
                         <h3 style="font-size: 20px; margin-bottom: 8px;">IBTECH via Amaris</h3>
-                        <p style="font-size: 15px; color: var(--text-muted);">Fullstack Developer olarak bankacılık
-                            projelerinde kritik mikroservislerin geliştirilmesi ve yönetimi.</p>
+                        <p style="font-size: 15px; color: var(--text-muted);">Bankacılık Dış Ticaret ekibinde, core banking uygulamaları üzerinde kritik iş süreçlerini kapsayan Full-stack geliştirmeler.</p>
                     </div>
                 </div>
 
