--- a/apps.html
+++ b/apps.html
@@ -20,7 +20,7 @@
 
     <nav>
         <div class="nav-content">
-            <a href="index.html" class="logo">KNSK</a>
+            <a href="/" class="logo">KNSK</a>
             <div class="nav-links">
                 <a href="/">Ana Sayfa</a>
                 <a href="programming">Programlama</a>
@@ -105,26 +105,36 @@
     </footer>
 
     <script>
+        function toggleMobileMenu() {
+            const menu = document.getElementById('mobile-menu');
+            const toggle = document.getElementById('mobile-toggle');
+            const icon = toggle.querySelector('i');
+
+            menu.classList.toggle('active');
+
+            if (icon) {
+                if (menu.classList.contains('active')) {
+                    icon.classList.replace('fa-bars', 'fa-times');
+                } else {
+                    icon.classList.replace('fa-times', 'fa-bars');
+                }
+            }
+        }
+
         const mobileToggle = document.getElementById('mobile-toggle');
         const mobileMenu = document.getElementById('mobile-menu');
 
-        if (mobileToggle && mobileMenu) {
-            mobileToggle.addEventListener('click', () => {
-                mobileMenu.classList.toggle('active');
-                const icon = mobileToggle.querySelector('i');
-                if (icon) {
-                    icon.classList.toggle('fa-bars');
-                    icon.classList.toggle('fa-times');
-                }
-            });
+        if (mobileToggle) {
+            mobileToggle.addEventListener('click', toggleMobileMenu);
+        }
 
+        if (mobileMenu) {
             mobileMenu.querySelectorAll('a').forEach(link => {
                 link.addEventListener('click', () => {
                     mobileMenu.classList.remove('active');
                     const icon = mobileToggle.querySelector('i');
                     if (icon) {
-                        icon.classList.add('fa-bars');
-                        icon.classList.remove('fa-times');
+                        icon.classList.replace('fa-times', 'fa-bars');
                     }
                 });
             });
