--- a/apps.html
+++ b/apps.html
@@ -71,26 +71,33 @@
                     rehberidir.
                 </p>
 
-                <div class="card-grid" style="gap: 15px; margin-bottom: 40px;">
+                <div class="card-grid"
+                    style="display: grid; grid-template-columns: 1fr 1fr; gap: 12px; margin-bottom: 30px;">
                     <div class="glass-card"
-                        style="padding: 24px; text-align: left; border-color: rgba(78, 226, 192, 0.2);">
-                        <i class="fas fa-file-invoice-dollar"
-                            style="color: var(--accent); font-size: 24px; margin-bottom: 12px;"></i>
-                        <h4 style="font-size: 15px; margin-bottom: 5px;">Hesap Ekstresi Import</h4>
-                        <p style="font-size: 12px; color: var(--text-muted);">Banka ekstrenizi import edin,
-                            harcamalarınızı saniyeler içinde otomatik kategorize edelim.</p>
+                        style="padding: 16px 20px; text-align: left; border-color: rgba(78, 226, 192, 0.15); height: 100%; display: flex; flex-direction: column;">
+                        <div style="display: flex; align-items: center; gap: 12px; margin-bottom: 8px;">
+                            <i class="fas fa-file-invoice-dollar" style="color: var(--accent); font-size: 20px;"></i>
+                            <h4 style="font-size: 15px; margin: 0;">Hesap Ekstresi Import</h4>
+                        </div>
+                        <p
+                            style="font-size: 13px; color: var(--text-muted); line-height: 1.5; margin: 0; flex-grow: 1;">
+                            Banka ekstrenizi import edin, harcamalarınızı saniyeler içinde otomatik kategorize edelim.
+                        </p>
                     </div>
                     <div class="glass-card"
-                        style="padding: 24px; text-align: left; border-color: rgba(78, 226, 192, 0.2);">
-                        <i class="fas fa-lock" style="color: var(--accent); font-size: 24px; margin-bottom: 12px;"></i>
-                        <h4 style="font-size: 15px; margin-bottom: 5px;">Hassas Güvenlik</h4>
-                        <p style="font-size: 12px; color: var(--text-muted);">Tüm verileriniz iCloud üzerinden şifreli
-                            şekilde senkronize edilir.</p>
+                        style="padding: 16px 20px; text-align: left; border-color: rgba(78, 226, 192, 0.15); height: 100%; display: flex; flex-direction: column;">
+                        <div style="display: flex; align-items: center; gap: 12px; margin-bottom: 8px;">
+                            <i class="fas fa-lock" style="color: var(--accent); font-size: 20px;"></i>
+                            <h4 style="font-size: 15px; margin: 0;">Hassas Güvenlik</h4>
+                        </div>
+                        <p
+                            style="font-size: 13px; color: var(--text-muted); line-height: 1.5; margin: 0; flex-grow: 1;">
+                            Tüm verileriniz iCloud üzerinden şifreli şekilde senkronize edilir.</p>
                     </div>
                 </div>
 
-                <div style="text-align: left;">
-                    <a href="#" class="btn-cta btn-pulse" style="display: inline-block;">
+                <div style="text-align: center; margin-top: 10px;">
+                    <a href="#" class="btn-cta btn-pulse" style="display: inline-block; width: 100%; max-width: 400px;">
                         App Store'dan İndir (Yakında)
                     </a>
                 </div>
