--- a/apps.html
+++ b/apps.html
@@ -96,10 +96,18 @@
                     </div>
                 </div>
 
-                <div style="text-align: center; margin-top: 10px;">
+                <div style="text-align: center; margin-top: 20px;">
                     <a href="#" class="btn-cta btn-pulse" style="display: inline-block; width: 100%; max-width: 400px;">
                         App Store'dan İndir (Yakında)
                     </a>
+                    <div style="margin-top: 15px;">
+                        <a href="privacy-vynto"
+                            style="color: var(--text-muted); text-decoration: none; font-size: 13px; font-weight: 500; transition: var(--transition); border-bottom: 1px solid rgba(255, 255, 255, 0.1); padding-bottom: 2px;"
+                            onmouseover="this.style.color='var(--accent)'; this.style.borderColor='var(--accent)'"
+                            onmouseout="this.style.color='var(--text-muted)'; this.style.borderColor='rgba(255, 255, 255, 0.1)'">
+                            Gizlilik Politikası (Privacy Policy)
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
