--- a/contact.html
+++ b/contact.html
@@ -125,11 +125,11 @@
 
         <div class="contact-grid animate" style="animation-delay: 0.2s; align-items: start;">
             <div style="padding-top: 20px;">
-                <a href="mailto:kaansaka07@gmail.com" class="info-item" style="text-decoration: none; color: inherit;">
+                <a href="mailto:kaanska07@gmail.com" class="info-item" style="text-decoration: none; color: inherit;">
                     <div class="info-icon"><i class="fas fa-envelope"></i></div>
                     <div>
                         <h4 style="font-size: 20px;">E-posta</h4>
-                        <p style="color: var(--text-muted); font-size: 16px;">kaansaka07@gmail.com</p>
+                        <p style="color: var(--text-muted); font-size: 16px;">kaanska07@gmail.com</p>
                     </div>
                 </a>
                 <a href="https://linkedin.com/in/kaansaka" target="_blank" class="info-item"
@@ -189,9 +189,9 @@
             const menu = document.getElementById('mobile-menu');
             const toggle = document.getElementById('mobile-toggle');
             const icon = toggle.querySelector('i');
-            
+
             menu.classList.toggle('active');
-            
+
             if (icon) {
                 if (menu.classList.contains('active')) {
                     icon.classList.replace('fa-bars', 'fa-times');
