--- a/privacy-vynto.html
+++ b/privacy-vynto.html
@@ -151,8 +151,8 @@
 
             <h2>7. İletişim</h2>
             <p>Bu politika hakkında daha fazla bilgi almak veya sorularınızı iletmek için web sitemizi ziyaret edebilir
-                veya <a href="mailto:kaansaka07@gmail.com"
-                    style="color: var(--accent); text-decoration: none;">kaansaka07@gmail.com</a> adresinden
+                veya <a href="mailto:kaanska07@gmail.com"
+                    style="color: var(--accent); text-decoration: none;">kaanska07@gmail.com</a> adresinden
                 ulaşabilirsiniz.</p>
 
             <div style="margin-top: 60px; border-top: 1px solid var(--card-border); padding-top: 30px;">
