--- a/privacy-vynto.html
+++ b/privacy-vynto.html
@@ -62,6 +62,12 @@
         .back-link:hover {
             transform: translateX(-5px);
         }
+
+        @media (max-width: 768px) {
+            .mobile-toggle {
+                display: none !important;
+            }
+        }
     </style>
 </head>
 
