--- a/privacy-vynto.html
+++ b/privacy-vynto.html
@@ -125,20 +125,20 @@
             </ul>
 
             <h2>3. Verilerin Saklanması ve Güvenliği</h2>
-            <p>Verileriniz, Google tarafından sağlanan dünya standartlarındaki Firebase altyapısında şifrelenmiş olarak
-                saklanır.</p>
+            <p>Verileriniz, dünya standartlarında güvenlik sertifikalarına sahip güvenilir bulut hizmet sağlayıcılarının
+                altyapısında şifrelenmiş olarak saklanır.</p>
             <ul>
-                <li><strong>Firebase Authentication:</strong> Şifreleriniz asla direkt olarak okunamaz, güvenli bir
-                    şekilde hash'lenir.</li>
-                <li><strong>Firebase Firestore:</strong> Finansal kayıtlarınız sadece sizin UID'nize (kullanıcı
-                    kimliğinize) özel olarak tanımlanmış kurallarla (Security Rules) korunur; başka hiçbir kullanıcının
-                    erişimine izin verilmez.</li>
+                <li><strong>Hesap Güvenliği:</strong> Parolalarınız endüstri standardı şifreleme yöntemleri ile korunur
+                    ve asla düz metin olarak saklanmaz.</li>
+                <li><strong>Veri Erişimi:</strong> Finansal kayıtlarınıza sadece sizin hesabınız üzerinden erişilebilir.
+                    Yetkisiz erişimleri engellemek için gelişmiş güvenlik protokolleri ve erişim kısıtlamaları
+                    uygulanmaktadır.</li>
             </ul>
 
             <h2>4. Veri Paylaşımı</h2>
             <p>Vynto, kullanıcı verilerini asla satmaz, kiralamaz ve reklam amaçlı üçüncü taraf şirketlerle paylaşmaz.
-                Verileriniz sadece uygulamanın çalışması için gerekli olan bulut altyapı hizmeti sağlayıcısıyla (Google
-                Firebase) güvenli protokoller üzerinden paylaşılır.</p>
+                Verileriniz sadece uygulamanın çalışması için gerekli olan güvenilir bulut altyapı hizmeti
+                sağlayıcılarıyla güvenli protokoller üzerinden işlenir.</p>
 
             <h2>5. Kullanıcı Hakları ve Hesap Silme</h2>
             <p>Kullanıcılarımız, istedikleri zaman şu haklara sahiptir:</p>
