--- a/programming.html
+++ b/programming.html
@@ -60,6 +60,30 @@
             transform: rotate(90deg);
         }
 
+        @media (max-width: 768px) {
+            .modal-content {
+                padding: 40px 20px;
+                max-height: 90vh;
+            }
+
+            .close-btn {
+                position: sticky;
+                top: 0;
+                right: 0;
+                margin-left: auto;
+                display: block;
+                width: 40px;
+                height: 40px;
+                line-height: 40px;
+                text-align: center;
+                background: rgba(17, 24, 39, 0.9);
+                border-radius: 50%;
+                z-index: 10;
+                backdrop-filter: blur(5px);
+                margin-bottom: 10px;
+            }
+        }
+
         .modal-body h2 {
             font-size: 42px;
             margin-bottom: 30px;
