--- a/contact.html
+++ b/contact.html
@@ -132,12 +132,12 @@
                         <p style="color: var(--text-muted); font-size: 16px;">kaanska07@gmail.com</p>
                     </div>
                 </a>
-                <a href="https://linkedin.com/in/kaansaka" target="_blank" class="info-item"
+                <a href="https://www.linkedin.com/in/kaan-saka-06ba3b158" target="_blank" class="info-item"
                     style="text-decoration: none; color: inherit;">
                     <div class="info-icon"><i class="fab fa-linkedin-in"></i></div>
                     <div>
                         <h4 style="font-size: 20px;">LinkedIn</h4>
-                        <p style="color: var(--text-muted); font-size: 16px;">linkedin.com/in/kaansaka</p>
+                        <p style="color: var(--text-muted); font-size: 16px;">linkedin.com/in/kaan-saka-06ba3b158</p>
                     </div>
                 </a>
                 <a href="https://twitter.com/kaanska7" target="_blank" class="info-item"
