--- a/contact.html
+++ b/contact.html
@@ -131,7 +131,7 @@
                         <h4 style="font-size: 20px;">E-posta</h4>
                     </div>
                 </a>
-                <a href="https://www.linkedin.com/in/kaan-saka-06ba3b158" target="_blank" class="info-item"
+                <a href="https://www.linkedin.com/in/kaansaka/" target="_blank" class="info-item"
                     style="text-decoration: none; color: inherit;">
                     <div class="info-icon"><i class="fab fa-linkedin-in"></i></div>
                     <div>
