--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kaan Saka | Fullstack Developer</title>
-    <meta name="description" content="Kaan Saka - Fullstack Developer Portfolio. 2026 Premium Portfolio.">
+    <meta name="description" content="Kaan Saka - Fullstack Developer">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="icon" href="images/code.svg">
@@ -108,7 +108,7 @@
                 </div>
             </div>
         </section>
-<br><br><br><br>
+        <br><br><br><br>
         <section id="experience" class="container section-spacing">
             <h2 class="section-title">Kariyer <span class="underline">Yolculuğum</span></h2>
 
