--- a/contact.html
+++ b/contact.html
@@ -154,7 +154,7 @@
                 </a>
             </div>
 
-            <form action="https://formspree.io/f/mwpelggq" method="POST" class="contact-form">
+            <form id="contact-form" class="contact-form">
                 <div class="form-group">
                     <label>Adınız</label>
                     <input type="text" name="name" placeholder="İsim Soyisim" required>
@@ -168,8 +168,10 @@
                     <textarea name="message" placeholder="Size nasıl yardımcı olabilirim?" style="min-height: 150px;"
                         required></textarea>
                 </div>
-                <button type="submit" class="btn-cta"
+                <button type="submit" id="submit-button" class="btn-cta"
                     style="width: 100%; border: none; cursor: pointer; height: 60px; font-size: 18px;">Gönder</button>
+                <div id="form-status" style="margin-top: 20px; text-align: center; font-weight: 600; display: none;">
+                </div>
             </form>
         </div>
     </main>
@@ -212,6 +214,55 @@
                     if (icon) {
                         icon.classList.replace('fa-times', 'fa-bars');
                     }
+                });
+            });
+        }
+
+        // Form Submission Logic
+        const contactForm = document.getElementById('contact-form');
+        const formStatus = document.getElementById('form-status');
+        const submitButton = document.getElementById('submit-button');
+
+        if (contactForm) {
+            contactForm.addEventListener('submit', function (e) {
+                e.preventDefault();
+
+                const formData = new FormData(contactForm);
+                submitButton.disabled = true;
+                submitButton.textContent = 'Gönderiliyor...';
+
+                fetch('https://formspree.io/f/mwpelggq', {
+                    method: 'POST',
+                    body: formData,
+                    headers: {
+                        'Accept': 'application/json'
+                    }
+                }).then(response => {
+                    if (response.ok) {
+                        formStatus.style.display = 'block';
+                        formStatus.style.color = 'var(--accent)';
+                        formStatus.textContent = 'Mesajınız başarıyla gönderildi!';
+                        contactForm.reset();
+                        submitButton.textContent = 'Gönderildi';
+                    } else {
+                        response.json().then(data => {
+                            formStatus.style.display = 'block';
+                            formStatus.style.color = '#ff4b2b';
+                            if (Object.hasOwn(data, 'errors')) {
+                                formStatus.textContent = data["errors"].map(error => error["message"]).join(", ");
+                            } else {
+                                formStatus.textContent = 'Bir hata oluştu. Lütfen tekrar deneyin.';
+                            }
+                            submitButton.disabled = false;
+                            submitButton.textContent = 'Tekrar Dene';
+                        })
+                    }
+                }).catch(error => {
+                    formStatus.style.display = 'block';
+                    formStatus.style.color = '#ff4b2b';
+                    formStatus.textContent = 'Bağlantı hatası oluştu. Lütfen kontrol edin.';
+                    submitButton.disabled = false;
+                    submitButton.textContent = 'Tekrar Dene';
                 });
             });
         }
