--- a/contact.html
+++ b/contact.html
@@ -243,8 +243,10 @@
                 // Get reCAPTCHA token
                 grecaptcha.ready(function () {
                     try {
+                        console.log('reCAPTCHA requested...');
                         grecaptcha.execute('6LcnME0sAAAAAIzBV70ZfAdSKFPhZJtBLxE_EzlM', { action: 'submit' })
                             .then(function (token) {
+                                console.log('reCAPTCHA token received');
                                 formData.append('g-recaptcha-response', token);
                                 submitButton.textContent = 'Gönderiliyor...';
 
