--- a/privacy-vynto.html
+++ b/privacy-vynto.html
@@ -101,7 +101,7 @@
             </a>
 
             <h1>Vynto - Gizlilik Politikası</h1>
-            <p><strong>Son Güncelleme:</strong> 15 Ocak 2026</p>
+            <p>Son Güncelleme: 15 Ocak 2026</p>
 
             <p>Vynto ("Uygulama") olarak, kişisel verilerinizin güvenliği ve gizliliği bizim için en önemli önceliktir.
                 Bu Gizlilik Politikası, uygulamamızı kullandığınızda hangi verileri topladığımızı, bunları nasıl
@@ -120,20 +120,15 @@
                     bilgiler, hesabınızı oluşturmak ve cihazlar arası senkronizasyon sağlamak için kullanılır.</li>
                 <li><strong>Finansal Veriler:</strong> Uygulama içine girdiğiniz gelir, gider, borç ve işlem
                     açıklamaları. Bu veriler sadece bütçe takibinizi yapabilmeniz için işlenir ve analiz edilir.</li>
-                <li><strong>Teknik Veriler:</strong> Uygulamanın kararlılığını sağlamak amacıyla kullanılan anonim hata
-                    raporları ve temel cihaz bilgileri.</li>
+                <li><strong>Kamera ve Görüntüleme:</strong> Fiş tarama özelliği için kameranız kullanılır.
+                    <strong>ÖNEMLİ:</strong> Bu görüntüleme tamamen cihaz üzerinde (On-Device OCR) gerçekleşir,
+                    fotoğraflarınız asla sunucularımıza yüklenmez veya saklanmaz.</li>
             </ul>
 
             <h2>3. Verilerin Saklanması ve Güvenliği</h2>
             <p>Verileriniz, dünya standartlarında güvenlik sertifikalarına sahip güvenilir bulut hizmet sağlayıcılarının
-                altyapısında şifrelenmiş olarak saklanır.</p>
-            <ul>
-                <li><strong>Hesap Güvenliği:</strong> Parolalarınız endüstri standardı şifreleme yöntemleri ile korunur
-                    ve asla düz metin olarak saklanmaz.</li>
-                <li><strong>Veri Erişimi:</strong> Finansal kayıtlarınıza sadece sizin hesabınız üzerinden erişilebilir.
-                    Yetkisiz erişimleri engellemek için gelişmiş güvenlik protokolleri ve erişim kısıtlamaları
-                    uygulanmaktadır.</li>
-            </ul>
+                altyapısında şifrelenmiş olarak saklanır. Finansal kayıtlarınıza sadece sizin hesabınız üzerinden
+                erişilebilir. Yetkisiz erişimleri engellemek için gelişmiş güvenlik protokolleri uygulanmaktadır.</p>
 
             <h2>4. Veri Paylaşımı</h2>
             <p>Vynto, kullanıcı verilerini asla satmaz, kiralamaz ve reklam amaçlı üçüncü taraf şirketlerle paylaşmaz.
@@ -143,17 +138,17 @@
             <h2>5. Kullanıcı Hakları ve Hesap Silme</h2>
             <p>Kullanıcılarımız, istedikleri zaman şu haklara sahiptir:</p>
             <ul>
-                <li>Kayıtlı verilerini görüntüleme.</li>
-                <li>Hatalı verileri düzeltme.</li>
+                <li>Kayıtlı verilerini görüntüleme ve düzeltme.</li>
                 <li><strong>Hesabı ve Tüm Verileri Silme:</strong> Uygulama içerisindeki Profil > Hesap Yönetimi
                     sekmesinden "Hesabımı Kalıcı Olarak Sil" butonuna basarak; e-posta bilginiz, işlemleriniz,
                     borçlarınız ve tüm ayarlarınız dahil olmak üzere her şeyi kalıcı olarak silebilirsiniz. Bu işlem
                     geri alınamaz ve tüm veriler bulut sunucularından anında temizlenir.</li>
             </ul>
 
-            <h2>6. Üçüncü Taraf Servisler</h2>
-            <p>Uygulama, güncel döviz verilerini çekmek için API servislerini kullanabilir. Bu işlem sırasında kişisel
-                verileriniz servis sağlayıcılarla paylaşılmaz; sadece anonim veri talebi gönderilir.</p>
+            <h2>6. Üçüncü Taraf Servisler ve AI</h2>
+            <p>Uygulama, güncel döviz verilerini çekmek için API servislerini kullanabilir. Fiş tarama (AI Receipt
+                Scanning) işlemi Apple'ın yerel Vision teknolojisi ile tamamen cihazınızda yapılır; hiçbir görüntü veya
+                döküman verisi üçüncü taraflarla paylaşılmaz.</p>
 
             <h2>7. İletişim</h2>
             <p>Bu politika hakkında daha fazla bilgi almak veya sorularınızı iletmek için web sitemizi ziyaret edebilir
