--- a/apps.html
+++ b/apps.html
@@ -72,7 +72,7 @@
                 </p>
 
                 <div class="card-grid"
-                    style="display: grid; grid-template-columns: 1fr 1fr; gap: 12px; margin-bottom: 30px;">
+                    style="display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 12px; margin-bottom: 30px;">
                     <div class="glass-card"
                         style="padding: 16px 20px; text-align: left; border-color: rgba(78, 226, 192, 0.15); height: 100%; display: flex; flex-direction: column;">
                         <div style="display: flex; align-items: center; gap: 12px; margin-bottom: 8px;">
@@ -81,7 +81,18 @@
                         </div>
                         <p
                             style="font-size: 13px; color: var(--text-muted); line-height: 1.5; margin: 0; flex-grow: 1;">
-                            Banka ekstrenizi import edin, harcamalarınızı saniyeler içinde otomatik kategorize edelim.
+                            Banka ekstrenizi import edin, harcamalarınızı otomatik kategorize edelim.
+                        </p>
+                    </div>
+                    <div class="glass-card"
+                        style="padding: 16px 20px; text-align: left; border-color: rgba(78, 226, 192, 0.15); height: 100%; display: flex; flex-direction: column;">
+                        <div style="display: flex; align-items: center; gap: 12px; margin-bottom: 8px;">
+                            <i class="fas fa-camera" style="color: var(--accent); font-size: 20px;"></i>
+                            <h4 style="font-size: 15px; margin: 0;">AI Fiş Tarama</h4>
+                        </div>
+                        <p
+                            style="font-size: 13px; color: var(--text-muted); line-height: 1.5; margin: 0; flex-grow: 1;">
+                            Fişlerinizin fotoğrafını çekin, yapay zeka tutar ve tarihi anında dijitalleştirsin.
                         </p>
                     </div>
                     <div class="glass-card"
